samples/_failures_safe/1761205247_183188_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b68802b5.c: In function ‘main’:
./samples/SAFE/__tmp_b68802b5.c:180:5: error: expected expression at end of input
  180 |     current_token =
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_b68802b5.c:180:5: error: expected declaration or statement at end of input
